--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,54 @@
-.App {
-  text-align: center;
-}
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+body{
+  background-color: #6d3ddf;
+  color: rgb(207, 66, 66);
   display: flex;
-  flex-direction: column;
-  align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  padding: 20px;
 }
 
-.App-link {
-  color: #61dafb;
+.container0{
+  border: 2px solid rgb(0, 0, 0);
+  background-color:rgb(133, 133, 118);
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.container1{
+  border: 2px solid rgb(0, 0, 0);
+  width: 750px;
+  height: 240px;
+  background-color:rgb(133, 133, 118);
+}
+
+.mensaje{
+  color: rgb(242, 242, 248);
+  font-size: 30px;
+}
+
+.tituloPrincipal{
+  color:cornsilk;
+}
+
+.elegirArmas{
+  color:cornsilk;
+}
+.limpiarTablero{
+  border-radius: 10px;
+}
+.restartButton{
+  border-radius: 10px;
+}
+
+.buttons1 {
+  border: 0;
+  background-color: transparent;
+  font-size: 80px;
+  color: #f70000fb;
+ }
+
+.buttons2 {
+  border: 0;
+  background-color: transparent;
+  font-size: 80px;
+  color: rgb(61, 61, 248);
+  
 }
